/*
 * $Id: ChangeLog,v 1.3439 2004/09/16 17:31:47 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-09-16 11:33 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * source/pp/ppcore.c
    ! Fixed bug in getExpReal() related to ++ or -- followed by a <space> when used as prefix operator.

2004-09-16 19:30 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rtl/filesys.c
    + respect the additional flags FO_EXCL, FO_TRUNC, FO_CREAT defined
      in fileio.ch in FOPEN - IMHO if we already have such flags with
      FO_ prefix then they have to be respected - also they are necessary
      to avoid race condition in some cases

2004-09-16 20:15 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/pp/ppcore.c
    ! Increased the maximum number of preprocessor passes on a single line
      from 256 to 4096. This prevents false recursion error messages for some
      applications.

2004-09-16 12:20 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * source/rtl/alert.prg
    ! Fix corret color string pairs handle. See alert doc to more details.

  * doc/en/terminal.txt
    ! Update alert documentation about color string pairs handle.

  * source/clipsamp/environ.c
    ! Fix a compiler error. Comented /* skip the dot */

2004-09-15 23:20 UTC-0300 Luiz Rafael Culik <culikr at brturbo.com>
  * source/clipsamp/environ.c
    ! fix on FileExt which cause GPF on windows ,Bug reported and Fix Provided by   David Arturo M. Corona

2004-09-15 11:00 UTC+0700 Budyanto Dj. <budyanto@centrin.net.id>
  * include/hbgtwvt.h
  * source/rtl/gtwvt/gtwvt.c
  * source/rtl/gtwvt/wvtutils.c
    ! Fix support for codeblock as dialog's wndproc.
      (Pritpal, pls check if it works as you expected.)

2004-09-14 22:10 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/Makefile
  * xharbour/make_tgz.sh